--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon server/index.js",
+    "react-dev": "webpack -d --watch",
+    "mongo-dev": "mongod --dbpath database-mongo/db"
+
   },
   "repository": {
     "type": "git",
@@ -18,7 +21,13 @@
   },
   "homepage": "https://github.com/FreedomFighters1/droppify#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "axios": "^0.16.1",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "mongo": "^0.1.0",
+    "mongoose": "^4.9.7",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.0"
   },
   "engines": {
     "node": ">=6.9.5"
