--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
+    "start": "node ./server/index.js",
+    "start-dev": "nodemon /.server/index.js",
     "react-dev": "webpack -d --watch",
     "mongo-dev": "mongod --dbpath database-mongo/db"
   },
@@ -22,13 +23,22 @@
   "dependencies": {
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.15.2",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.7",
+    "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
+    "react-dom": "^15.5.4",
+    "reactstrap": "^4.5.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   },
   "engines": {
     "node": ">=6.9.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
