--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server/index.js",
-    "start-dev": "nodemon /.server/index.js",
+    "start-dev": "nodemon ./server/index.js",
     "react-dev": "webpack -d --watch",
     "mongo-dev": "mongod --dbpath database-mongo/db"
   },
@@ -22,11 +22,12 @@
   "homepage": "https://github.com/FreedomFighters1/droppify#readme",
   "dependencies": {
     "axios": "^0.16.1",
+    "babel": "^6.23.0",
     "body-parser": "^1.17.1",
-    "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.15.2",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.7",
+    "pdf-table-extractor": "^1.0.3",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
@@ -39,6 +40,16 @@
     "node": ">=6.9.5"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "install": "^0.9.6",
+    "nodemon": "^1.11.0",
+    "npm": "^4.5.0",
+    "webpack": "^2.4.1"
   }
 }
