--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node ./server/index.js",
     "start-dev": "nodemon ./server/index.js",
     "react-dev": "webpack -d --watch",
-    "mongo-dev": "mongod --dbpath database-mongo/db"
+    "mongo-dev": "mongod --dbpath database-mongo/db",
+    "postinstall": "npm run react-dev"
+
   },
   "repository": {
     "type": "git",
