--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "mongo-dev": "mongod --dbpath database-mongo/db",
     "build": "webpack -p",
     "postinstall": "npm run build"
-
   },
   "repository": {
     "type": "git",
@@ -37,7 +36,8 @@
     "react-dom": "^15.5.4",
     "reactstrap": "^4.5.0",
     "request": "^2.81.0",
-    "request-promise": "^4.2.0"
+    "request-promise": "^4.2.0",
+    "webpack": "^2.5.0"
   },
   "engines": {
     "node": ">=6.9.5"
