--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-dev": "nodemon ./server/index.js",
     "react-dev": "webpack -d --watch",
     "mongo-dev": "mongod --dbpath database-mongo/db",
-    "build": "NODE_ENV=production webpack -p --config ./webpack.prod.config.js --progress",
+    "build": "NODE_ENV=production webpack -p --progress --colors",
     "postinstall": "npm run build"
   },
   "repository": {
@@ -24,7 +24,6 @@
   "homepage": "https://github.com/FreedomFighters1/droppify#readme",
   "dependencies": {
     "axios": "^0.16.1",
-    "babel": "^6.23.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongo": "^0.1.0",
@@ -36,8 +35,7 @@
     "react-dom": "^15.5.4",
     "reactstrap": "^4.5.0",
     "request": "^2.81.0",
-    "request-promise": "^4.2.0",
-    "webpack": "^2.5.0"
+    "request-promise": "^4.2.0"
   },
   "engines": {
     "node": ">=6.9.5"
@@ -50,7 +48,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
-    "install": "^0.9.6",
     "nodemon": "^1.11.0",
     "npm": "^4.5.0",
     "webpack": "^2.4.1"
