--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^15.5.4",
     "reactstrap": "^4.5.0",
     "request": "^2.81.0",
-    "request-promise": "^4.2.0"
+    "request-promise": "^4.2.0",
+    "webpack": "^2.4.1"
   },
   "engines": {
     "node": ">=6.9.5"
