set inherintance in app.json for review apps

--- a/app.json
+++ b/app.json
@@ -3,6 +3,8 @@
   "scripts": {
   },
   "env": {
+    "NPM_CONFIG_PRODUCTION": {
+      "required": true
   },
   "formation": {
   },
@@ -15,3 +17,10 @@
     }
   ]
 }
+
+"env": {
+    "INHERIT_THIS_CONFIG_VAR": {
+      "required": true
+    },
+    "DONT_INHERIT_THIS_CONFIG_VAR": "production"
+  },
