--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "jquery": "^3.2.1",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.7",
     "pdf-table-extractor": "^1.0.3",
