--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "dependencies": {
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
+    "bootstrap": "^4.0.0-alpha.6",
+    "build-bundle": "^2.0.8",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
+    "material-ui": "^0.18.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.7",
     "pdf-table-extractor": "^1.0.3",
