add cloudinary & cloudinary.jquery & cloudinary react

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "build-bundle": "^2.0.8",
+    "cloudinary": "^1.9.0",
+    "cloudinary-jquery": "^2.3.0",
+    "cloudinary-react": "^1.0.3",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "material-ui": "^0.18.0",
@@ -37,7 +40,6 @@
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
-    "reactstrap": "^4.5.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "webpack": "^2.4.1"
