--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
-    "underscore": "^1.8.3",
     "superagent": "^3.5.2",
+    "underscore": "^1.8.3",
     "webpack": "^2.4.1"
   },
   "engines": {
