--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
     "react-router-dom": "^4.1.1",
+    "react-spinjs": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
